--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/login_page_wireframe_mobile_ui_prototype"
+    android:background="@drawable/login"
     tools:context=".ui.ForgotPasswordActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -20,10 +20,14 @@
 
         <TextView
             android:id="@+id/textView5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="249dp"
+            android:layout_height="33dp"
+            android:layout_marginStart="92dp"
+            android:layout_marginTop="101dp"
+            android:layout_marginEnd="79dp"
+            android:layout_marginBottom="26dp"
             android:text="@string/reset_your_password"
-            android:textColor="#000000"
+            android:textColor="#FF5252"
             android:textSize="24sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -34,15 +38,17 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout"
-        android:layout_width="406dp"
-        android:layout_height="202dp"
+        android:layout_width="400dp"
+        android:layout_height="179dp"
         android:layout_marginTop="67dp"
         android:layout_marginBottom="201dp"
         android:background="#00009688"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/constraintLayout5">
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayout5"
+        app:layout_constraintVertical_bias="0.0">
 
         <LinearLayout
             android:id="@+id/loginlinearLayoutEmail"
@@ -50,8 +56,8 @@
             android:layout_height="90dp"
             android:layout_marginStart="30dp"
             android:layout_marginEnd="47dp"
-            app:boxStrokeWidth="0dp"
             android:orientation="horizontal"
+            app:boxStrokeWidth="0dp"
             app:layout_constraintBottom_toTopOf="@+id/loginlinearLayoutPassword"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent">
