--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -4,54 +4,80 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/login_page_wireframe_mobile_ui_prototype"
-    tools:context=".ui.profileActivity">
-    <include layout="@layout/appbar2"
-        />
+    android:background="@color/white"
+    android:foregroundTint="@android:color/transparent"
+    app:circularflow_defaultRadius="50dp"
+    app:circularflow_radiusInDP="50dp"
+    tools:context=".ui.ProfileActivity">
+
+    <include
+        android:id="@+id/include"
+        layout="@layout/appbar2"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout7"
-        android:layout_width="195dp"
-        android:layout_height="163dp"
-        android:layout_marginStart="104dp"
-        android:layout_marginTop="160dp"
-        android:layout_marginEnd="104dp"
+        android:layout_width="0dp"
+        android:layout_height="300dp"
+        android:layout_marginBottom="300dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="205dp"
-            android:layout_height="168dp"
-            android:contentDescription="@string/todohohoh"
-            app:layout_constraintBottom_toBottomOf="parent"
+        <androidx.cardview.widget.CardView
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
+            android:background="@android:color/transparent"
+            android:backgroundTint="@android:color/transparent"
+            app:cardBackgroundColor="@android:color/transparent"
+            app:cardCornerRadius="60dp"
+            app:cardPreventCornerOverlap="false"
+            app:cardUseCompatPadding="true"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHeight_min="wrap"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0"
-            app:srcCompat="@drawable/user" />
+            app:layout_constraintWidth_min="wrap">
+
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="match_parent"
+                android:layout_height="237dp"
+                android:layout_marginTop="2dp"
+                android:layout_marginBottom="2dp"
+                android:contentDescription="@string/todohohoh"
+                app:srcCompat="@drawable/user" />
+        </androidx.cardview.widget.CardView>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <LinearLayout
         android:id="@+id/linearLayout5"
-        android:layout_width="261dp"
-        android:layout_height="67dp"
-        android:layout_marginStart="75dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginEnd="75dp"
+        android:layout_width="305dp"
+        android:layout_height="119dp"
+        android:layout_marginBottom="200dp"
         android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="@+id/include"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/constraintLayout7">
 
         <TextView
             android:id="@+id/textView6"
-            android:layout_width="118dp"
+            android:layout_width="243dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="@string/your_name"
             android:textAlignment="center"
-            android:textSize="20sp"
+            android:textSize="34sp"
             android:textStyle="bold" />
 
         <TextView
@@ -61,7 +87,7 @@
             android:layout_weight="1"
             android:text="@string/your_age1"
             android:textAlignment="center"
-            android:textSize="20sp"
+            android:textSize="34sp"
             android:textStyle="bold" />
     </LinearLayout>
 
