--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -10,48 +10,45 @@
         android:id="@+id/constraintLayout4"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/login">
+        android:background="@drawable/login"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="-157dp">
 
-        <TextView
-            android:id="@+id/login"
+        <ImageView
+            android:id="@+id/profilepicsignup"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="118dp"
-            android:layout_marginTop="140dp"
-            android:layout_marginEnd="147dp"
-            android:text="@string/sign_up"
-            android:textAppearance="@style/TextAppearance.AppCompat.Large"
-            android:textColor="#FF5252"
-            android:textColorLink="#FFD2B6"
-            android:textSize="48sp"
-            android:textStyle="bold"
+            android:layout_height="123dp"
+            android:layout_marginTop="70dp"
+            android:layout_marginBottom="6dp"
+            android:contentDescription="@string/todo"
             app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/user" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/constraintLayout"
             android:layout_width="421dp"
             android:layout_height="334dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="180dp"
+            android:layout_marginBottom="176dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/login">
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent">
 
             <LinearLayout
                 android:id="@+id/linearLayoutEmail"
                 android:layout_width="320dp"
                 android:layout_height="90dp"
-                android:layout_marginStart="30dp"
-                android:layout_marginEnd="47dp"
+                android:layout_marginStart="40dp"
+                android:layout_marginTop="50dp"
+                android:layout_marginEnd="40dp"
                 android:orientation="horizontal"
                 app:layout_constraintBottom_toTopOf="@+id/linearLayoutPassword"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
 
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
 
                 <com.google.android.material.textfield.TextInputLayout
@@ -93,12 +90,11 @@
                 android:id="@+id/linearLayoutPassword"
                 android:layout_width="320dp"
                 android:layout_height="90dp"
-                android:layout_marginStart="30dp"
+                android:layout_marginStart="40dp"
+                android:layout_marginEnd="40dp"
+                android:orientation="horizontal"
                 app:boxStrokeColor="@color/black"
                 app:hintTextColor="@color/black"
-                android:layout_marginEnd="42dp"
-                android:orientation="horizontal"
-                app:layout_constraintBottom_toTopOf="@+id/linearLayoutReset"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/linearLayoutEmail">
@@ -141,22 +137,25 @@
             </LinearLayout>
 
             <LinearLayout
-                android:id="@+id/linearLayoutReset"
+                android:id="@+id/linearlayoutage"
                 android:layout_width="320dp"
                 android:layout_height="90dp"
-                android:layout_marginStart="30dp"
-                android:layout_marginEnd="48dp"
-                android:orientation="vertical"
+                android:layout_marginTop="1dp"
+                android:layout_marginBottom="13dp"
+                android:orientation="horizontal"
+                app:boxStrokeColor="@color/black"
+                app:hintTextColor="@color/black"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/linearLayoutPassword">
 
                 <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/LayoutRestPassword"
+                    android:id="@+id/textinputlayoutage"
                     android:layout_width="371dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="15dp"
+                    android:hint="@string/your_age"
                     android:textColorHighlight="#CEEC766D"
                     android:textColorLink="#CEEC766D"
                     app:boxBackgroundColor="#5EF67970"
@@ -167,29 +166,24 @@
                     app:boxStrokeColor="@color/black"
                     app:boxStrokeWidth="0dp"
                     app:boxStrokeWidthFocused="0dp"
-                    app:endIconCheckable="true"
-                    app:endIconMode="password_toggle"
                     app:hintTextColor="@color/black"
-                    app:startIconDrawable="@drawable/ic_baseline_lock_24">
+                    app:startIconDrawable="@drawable/ic_baseline_email_24">
 
                     <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/EditRestPassword"
+                        android:id="@+id/edittextage"
                         android:layout_width="296dp"
                         android:layout_height="62dp"
-                        android:layout_marginStart="8dp"
-                        android:hint="@string/repeat_password2"
-                        android:inputType="textPassword"
-                        android:textColor="@color/black"
-                        android:textColorHint="#F0ECF1"
+                        android:inputType="number|textPassword"
                         android:textSize="20sp"
                         android:textStyle="bold"
                         app:boxStrokeColor="@color/black"
                         app:boxStrokeWidth="0dp"
                         app:boxStrokeWidthFocused="0dp"
                         app:hintTextColor="@color/black"
-                        tools:ignore="TextContrastCheck" />
+                        tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />
                 </com.google.android.material.textfield.TextInputLayout>
             </LinearLayout>
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <Button
