--- a/app/src/main/res/drawable/ic_check_unselect.xml
+++ b/app/src/main/res/drawable/ic_check_unselect.xml
@@ -7,6 +7,6 @@
     <path
 
 
-        android:fillColor="#CEEC766D"
+        android:fillColor="#FF5252"
         android:pathData="M9,16.17L4.83,12l-1.42,1.41L9,19 21,7l-1.41,-1.41z" />
 </vector>
