--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -7,17 +7,21 @@
     tools:context=".ui.ChatActivity">
 
     <LinearLayout
-        android:layout_width="422dp"
-        android:layout_height="288dp"
-        android:orientation="horizontal"
+        android:layout_width="412dp"
+        android:layout_height="728dp"
+        android:layout_marginBottom="3dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerView"
+            android:id="@+id/recyclerView1"
             android:layout_width="match_parent"
-            android:layout_height="268dp"
+            android:layout_height="714dp"
+            android:layout_gravity="clip_horizontal"
+            android:clipToPadding="false"
             android:orientation="horizontal" />
     </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
