--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -16,7 +16,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#46D06084">
+            >
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -57,6 +57,7 @@
                                     android:layout_centerInParent="true"
                                     android:elevation="20dp"
                                     android:text="1"
+                                    android:textColorLink="#FFD2B6"
                                     android:textSize="60dp"
                                     android:textStyle="bold" />
 
@@ -108,6 +109,7 @@
                                         android:layout_centerInParent="true"
                                         android:text="2"
                                         android:textSize="60dp"
+                                        android:textColorLink="#FFD2B6"
                                         android:textStyle="bold" />
 
                                     <ImageView
@@ -149,6 +151,7 @@
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
                                         android:layout_centerInParent="true"
+                                        android:textColorLink="#FFD2B6"
                                         android:text="3"
                                         android:textSize="60dp"
                                         android:textStyle="bold" />
@@ -202,6 +205,7 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_centerInParent="true"
+                                    android:textColorLink="#FFD2B6"
                                     android:text="4"
                                     android:textSize="60dp"
                                     android:textStyle="bold" />
@@ -249,6 +253,7 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_centerInParent="true"
+                                    android:textColorLink="#FFD2B6"
                                     android:scaleType="fitXY"
                                     android:text="5"
                                     android:textSize="60dp"
@@ -297,6 +302,7 @@
                                     android:layout_centerInParent="true"
                                     android:text="6"
                                     android:textSize="60dp"
+                                    android:textColorLink="#FFD2B6"
                                     android:textStyle="bold" />
 
                                 <ImageView
@@ -339,6 +345,8 @@
                         android:layout_height="wrap_content"
                         android:padding="5dp"
                         android:text="About You"
+                        android:textColor="#FF5252"
+                        android:textColorLink="#FFD2B6"
                         android:textSize="18dp"
                         android:textStyle="bold" />
 
@@ -359,7 +367,7 @@
                             android:hint="Write something about you "
                             android:textColor="#070707"
                             android:textColorHighlight="#CEEC766D"
-                            android:textColorHint="#070707"
+                            android:textColorHint="#CEEC766D"
                             android:textColorLink="#CEEC766D"
                             android:textStyle="bold"
                             tools:ignore="TouchTargetSizeCheck" />
@@ -371,6 +379,7 @@
                         android:layout_height="match_parent"
                         android:textColorHighlight="#CEEC766D"
                         android:textColorLink="#CEEC766D"
+
                         app:boxBackgroundColor="@android:color/transparent"
                         tools:ignore="TouchTargetSizeCheck">
 
@@ -380,6 +389,7 @@
                             android:layout_height="match_parent"
                             android:background="@android:color/transparent"
                             android:hint="JobTile"
+
                             android:textColorHighlight="#CEEC766D"
                             android:textColorHint="#070707"
                             android:textColorLink="#CEEC766D"
@@ -412,6 +422,7 @@
                         android:layout_height="match_parent"
                         android:textColorHighlight="#CEEC766D"
                         android:textColorLink="#CEEC766D"
+
                         app:boxBackgroundColor="@android:color/transparent"
                         tools:ignore="TouchTargetSizeCheck">
 
@@ -423,6 +434,7 @@
                             android:hint="FirstName"
                             android:textColorHighlight="#CEEC766D"
                             android:textColorLink="#CEEC766D"
+
                             android:textStyle="bold"
                             tools:ignore="TouchTargetSizeCheck" />
                     </com.google.android.material.textfield.TextInputLayout>
@@ -503,6 +515,7 @@
                         android:padding="5dp"
                         android:text="Gender"
                         android:textSize="18dp"
+                        android:textColor="#FF5252"
                         android:textStyle="bold" />
 
                     <RelativeLayout
