--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -1,94 +1,118 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
-    android:foregroundTint="@android:color/transparent"
-    app:circularflow_defaultRadius="50dp"
-    app:circularflow_radiusInDP="50dp"
+    android:orientation="vertical"
     tools:context=".ui.ProfileActivity">
+    <!-- top navigation -->
 
-    <include
-        android:id="@+id/include"
-        layout="@layout/appbar2"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constraintLayout7"
-        android:layout_width="0dp"
-        android:layout_height="300dp"
-        android:layout_marginBottom="300dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="250dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
-            android:background="@android:color/transparent"
-            android:backgroundTint="@android:color/transparent"
-            app:cardBackgroundColor="@android:color/transparent"
-            app:cardCornerRadius="60dp"
-            app:cardPreventCornerOverlap="false"
-            app:cardUseCompatPadding="true"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHeight_min="wrap"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintWidth_min="wrap">
-
-            <ImageView
-                android:id="@+id/imageView"
-                android:layout_width="match_parent"
-                android:layout_height="237dp"
-                android:layout_marginTop="2dp"
-                android:layout_marginBottom="2dp"
-                android:contentDescription="@string/todohohoh"
-                app:srcCompat="@drawable/user" />
-        </androidx.cardview.widget.CardView>
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <LinearLayout
-        android:id="@+id/linearLayout5"
-        android:layout_width="305dp"
-        android:layout_height="119dp"
-        android:layout_marginBottom="200dp"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="@+id/include"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/constraintLayout7">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/profile_bg"
+        android:orientation="vertical"
+        android:weightSum="10"
+        tools:context=".MainActivity">
 
-        <TextView
-            android:id="@+id/textView6"
-            android:layout_width="243dp"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="@string/your_name"
-            android:textAlignment="center"
-            android:textSize="34sp"
-            android:textStyle="bold" />
+            android:layout_centerInParent="true"
+            android:layout_weight="3"
+            android:gravity="center"
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/textView7"
-            android:layout_width="118dp"
+
+            <com.example.matchinii.ui.PulsatorLayout
+                android:id="@+id/pulsator"
+                android:layout_width="180dp"
+                android:layout_height="180dp"
+                android:layout_centerInParent="true"
+                app:pulse_color="#CEEC766D"
+                app:pulse_count="3"
+                app:pulse_duration="5000"
+                app:pulse_interpolator="Decelerate"
+                app:pulse_repeat="0"
+                app:pulse_startFromScratch="false">
+
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/circle_profile_image"
+                    android:layout_width="151dp"
+                    android:layout_height="161dp"
+                    android:layout_centerInParent="true"
+                    android:layout_marginTop="59dp"
+                    android:src="@drawable/monkey"
+                    app:civ_border_color="#CEEC766D"
+                    app:civ_border_width="2dp" />
+            </com.example.matchinii.ui.PulsatorLayout>
+
+            <TextView
+                android:id="@+id/profile_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:text="Santosh Kumar"
+                android:textColor="@android:color/black"
+                android:textSize="20sp" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:orientation="horizontal">
+
+                <ImageButton
+                    android:id="@+id/edit_profile"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="30dp"
+                    android:layout_marginRight="30dp"
+                    android:background="@drawable/circle_background"
+                    android:gravity="center"
+                    android:onClick="Edit_Profile"
+                    android:padding="15dp"
+                    android:src="@drawable/ic_edit"
+                    tools:ignore="NotSibling,SpeakableTextPresentCheck" />
+
+                <View
+                    android:id="@+id/divider"
+                    android:layout_width="2dp"
+                    android:layout_height="50dp"
+                    android:layout_alignParentBottom="true"
+                    android:layout_centerHorizontal="true"
+                    android:background="#e5e5e5" />
+
+                <ImageButton
+                    android:id="@+id/settings"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentBottom="true"
+                    android:layout_marginStart="30dp"
+                    android:layout_marginLeft="30dp"
+                    android:background="@drawable/circle_background"
+                    android:foregroundTint="#000000"
+                    android:gravity="center"
+                    android:padding="15dp"
+                    android:src="@drawable/ic_settings"
+                    tools:ignore="SpeakableTextPresentCheck" />
+            </LinearLayout>
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="@string/your_age1"
-            android:textAlignment="center"
-            android:textSize="34sp"
-            android:textStyle="bold" />
+            android:layout_weight="3"></LinearLayout>
+
+        <!--dfs-->
     </LinearLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+
+</LinearLayout>
