--- a/app/src/main/res/layout/chat_item.xml
+++ b/app/src/main/res/layout/chat_item.xml
@@ -2,44 +2,73 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="12dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="253dp"
-        android:layout_height="300dp"
+        android:layout_width="88dp"
+        android:layout_height="100dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+        <View
+            android:id="@+id/onlineView"
+            android:layout_width="10dp"
+            android:layout_height="12dp"
+
+            android:layout_marginStart="60dp"
+            android:layout_marginTop="55dp"
+            android:layout_marginEnd="8dp"
+            android:background="@drawable/round_circle_online_green"
+            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+            app:layout_constraintEnd_toStartOf="@+id/linearLayout"
+            app:layout_constraintStart_toEndOf="@+id/imageCardView"
+            app:layout_constraintTop_toBottomOf="@+id/imageCardView"
+            tools:visibility="visible" />
+
+        <LinearLayout
+            android:id="@+id/linearLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/textView9"
+                android:layout_width="73dp"
+                android:layout_height="18dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="70dp"
+                android:text="TextView"
+                android:textSize="12sp" />
+        </LinearLayout>
+
         <androidx.cardview.widget.CardView
-            android:layout_width="214dp"
-            android:layout_height="280dp"
-            android:background="@drawable/brown_and_white__modern_travel_app_user_interface__2_"
-            android:backgroundTint="@android:color/transparent"
-            app:cardCornerRadius="50dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:id="@+id/imageCardView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="11dp"
+            android:layout_marginTop="11dp"
+            app:cardCornerRadius="29dp"
+            app:cardPreventCornerOverlap="false"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
             <ImageView
-                android:id="@+id/imageView3"
-                android:layout_width="match_parent"
-                android:layout_height="212dp"
-                android:layout_marginBottom="94dp"
-                android:contentDescription="@string/todooooooooo"
-                tools:srcCompat="@tools:sample/avatars" />
+                android:id="@+id/userProfileImage"
+                android:layout_width="58dp"
+                android:layout_height="58dp"
+                android:layout_margin="0dp"
+                android:layout_marginStart="12dp"
 
-            <TextView
-                android:id="@+id/textView2"
-                android:layout_width="177dp"
-                android:layout_height="66dp"
-                android:layout_marginTop="220dp"
-                android:text="@string/textviewzlokijhgv"
-                android:textAlignment="center"
-                android:textSize="34sp" />
+                android:layout_marginLeft="100dp"
+                android:contentDescription="@string/user_imageitem"
+                android:scaleType="centerCrop"
+
+                tools:src="@tools:sample/avatars[0]" />
+
         </androidx.cardview.widget.CardView>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
