--- a/app/src/main/res/layout/activity_chat_room.xml
+++ b/app/src/main/res/layout/activity_chat_room.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/rose"
     android:focusable="true"
     android:focusableInTouchMode="true">
 
@@ -22,8 +21,8 @@
 
     <EditText
         android:id="@+id/editText"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="347dp"
+        android:layout_height="57dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="16dp"
@@ -46,8 +45,8 @@
 
     <ImageView
         android:id="@+id/send"
-        android:layout_width="40dp"
-        android:layout_height="42dp"
+        android:layout_width="46dp"
+        android:layout_height="55dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="16dp"
         android:src="@drawable/icone_solutions_8"
@@ -58,7 +57,10 @@
         android:id="@+id/topbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
         android:orientation="horizontal"
+        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -71,30 +73,31 @@
             android:layout_marginBottom="10dp"
             android:src="@drawable/left_arrow" />
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/imageusr"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="70dp"
+            android:layout_height="69dp"
             android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
             android:src="@drawable/dummy_person" />
 
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_width="188dp"
+            android:layout_height="78dp"
             android:gravity="center"
             android:orientation="vertical">
 
             <TextView
                 android:id="@+id/partnerName"
-                android:layout_width="wrap_content"
+                android:layout_width="160dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="start"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="10dp"
                 android:gravity="center"
                 android:text="username"
+                android:textSize="15dp"
                 android:textStyle="italic"
                 android:visibility="visible" />
 
