--- a/app/src/main/res/layout-v23/row_chat_user.xml
+++ b/app/src/main/res/layout-v23/row_chat_user.xml
@@ -18,8 +18,8 @@
         android:paddingEnd="10dp"
         android:paddingBottom="5dp"
 
-        android:text="How are you bitch!"
-        android:textColor="@color/white"
+        android:text="@string/how_are_you"
+        android:textColor="@color/black"
         android:textSize="14sp"
         android:textStyle="bold" />
 
