--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -11,7 +11,7 @@
         android:layout_width="272dp"
         android:layout_height="41dp"
         android:layout_marginStart="41dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="12dp"
         android:layout_marginBottom="9dp"
         android:hint="@string/search"
@@ -52,9 +52,9 @@
 
     <LinearLayout
         android:id="@+id/linearLayout3"
-        android:layout_width="412dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
+        android:layout_width="409dp"
+        android:layout_height="626dp"
+        android:layout_marginTop="160dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -62,8 +62,8 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView1"
             android:layout_width="match_parent"
-            android:layout_height="142dp"
-            android:layout_gravity="clip_horizontal"
+            android:layout_height="match_parent"
+            android:layout_gravity="clip_horizontal|fill_vertical"
             android:clipToPadding="false"
             android:orientation="horizontal" />
     </LinearLayout>
@@ -73,7 +73,7 @@
         android:layout_width="76dp"
         android:layout_height="35dp"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="55dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="325dp"
         android:layout_marginBottom="10dp"
         android:text="@string/chats"
