--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -25,7 +25,6 @@
             android:gravity="center"
             android:orientation="vertical">
 
-
             <com.example.matchinii.ui.PulsatorLayout
                 android:id="@+id/pulsator"
                 android:layout_width="180dp"
@@ -100,19 +99,21 @@
                     android:padding="15dp"
                     android:src="@drawable/ic_settings"
                     tools:ignore="SpeakableTextPresentCheck" />
+
             </LinearLayout>
+
+            <include
+                android:id="@+id/include2"
+                layout="@layout/appbar"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="0dp" />
 
 
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="3"></LinearLayout>
-
         <!--dfs-->
     </LinearLayout>
-
 
 
 </LinearLayout>
