--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@android:color/transparent"
     android:orientation="vertical"
-    tools:context=".ui.EditProfileActivity">
+    tools:context=".ui.Activities.EditProfileActivity">
 
     <ScrollView
         android:layout_width="match_parent"
