--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -4,57 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.ChatActivity">
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/searchchat"
-        android:layout_width="272dp"
-        android:layout_height="41dp"
-        android:layout_marginStart="41dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="12dp"
-        android:layout_marginBottom="9dp"
-        android:hint="@string/search"
-        android:textColorHighlight="#CEEC766D"
-        android:textColorLink="#CEEC766D"
-        app:boxBackgroundColor="#5EF67970"
-        app:boxCornerRadiusBottomEnd="30dp"
-        app:boxCornerRadiusBottomStart="30dp"
-        app:boxCornerRadiusTopEnd="30dp"
-        app:boxCornerRadiusTopStart="30dp"
-        app:boxStrokeColor="@android:color/transparent"
-        app:boxStrokeWidth="0dp"
-        app:boxStrokeWidthFocused="0dp"
-        app:endIconCheckable="false"
-        app:endIconMode="none"
-        app:hintTextColor="@color/black"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView2"
-        app:layout_constraintTop_toTopOf="parent"
-        app:startIconCheckable="true"
-        app:startIconDrawable="@drawable/ic_baseline_search_24">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/searchchatEditText"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:inputType="textPassword"
-            android:textAlignment="textStart"
-            android:textColorHighlight="#CEEC766D"
-            android:textColorLink="#CEEC766D"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            app:boxStrokeWidth="0dp"
-            app:boxStrokeWidthFocused="0dp"
-            tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />
-    </com.google.android.material.textfield.TextInputLayout>
+    android:background="@drawable/login"
+    tools:context=".ui.Activities.ChatActivity">
 
     <LinearLayout
         android:id="@+id/linearLayout3"
         android:layout_width="409dp"
         android:layout_height="626dp"
-        android:layout_marginTop="160dp"
+        android:layout_marginTop="250dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -70,16 +27,13 @@
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="76dp"
-        android:layout_height="35dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="325dp"
-        android:layout_marginBottom="10dp"
-        android:text="@string/chats"
+        android:layout_width="240dp"
+        android:layout_height="75dp"
+        android:layout_marginTop="148dp"
+        android:text="MY FRIENDS"
         android:textAlignment="center"
         android:textColor="#FF5252"
-        android:textSize="24sp"
+        android:textSize="34sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
         app:layout_constraintEnd_toEndOf="parent"
