--- a/app/src/main/res/layout/card_item.xml
+++ b/app/src/main/res/layout/card_item.xml
@@ -35,35 +35,20 @@
 
             <TextView
                 android:id="@+id/textView3"
-                android:layout_width="105dp"
-                android:layout_height="107dp"
-                android:layout_marginTop="50dp"
+                android:layout_width="303dp"
+                android:layout_height="115dp"
+                android:layout_marginTop="90dp"
+                android:layout_marginEnd="6dp"
                 android:text="@string/textviewwwww"
                 android:textAlignment="center"
-                android:textSize="34sp"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/textView8"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
-                android:id="@+id/textView8"
-                android:layout_width="214dp"
-                android:layout_height="107dp"
-                android:layout_marginTop="50dp"
-                android:text="@string/textvieww"
-                android:textAlignment="center"
-                android:textColor="#EF6C00"
+                android:textAllCaps="false"
+                android:textColor="#EC8002"
                 android:textSize="34sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toEndOf="@+id/textView3"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.454"
-                tools:ignore="TextContrastCheck" />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
